--- a/src/main/resources/orhestra/ui/task_monitoring.fxml
+++ b/src/main/resources/orhestra/ui/task_monitoring.fxml
@@ -5,20 +5,24 @@
 <VBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="orhestra.coordinator.ui.TaskMonitoringController"
       spacing="10.0" styleClass="pad">
+
     <HBox spacing="10.0">
+        <Button text="Загрузить JSON" onAction="#onAddJsonFile"/>
         <Button text="Обновить" onAction="#refreshTasks"/>
         <Label text="Очередь / Статусы задач" styleClass="muted"/>
+        <Region HBox.hgrow="ALWAYS"/>
     </HBox>
 
-    <TableView fx:id="taskTable" prefHeight="560">
+    <TableView fx:id="taskTable" prefHeight="560" VBox.vgrow="ALWAYS">
         <columns>
-            <TableColumn fx:id="idColumn"      text="ID"        prefWidth="120"/>
-            <TableColumn fx:id="algColumn"     text="Alg"       prefWidth="80"/>
-            <TableColumn fx:id="funcColumn"    text="Func"      prefWidth="120"/>
-            <TableColumn fx:id="iterColumn"    text="Iter"      prefWidth="80"/>
-            <TableColumn fx:id="runtimeColumn" text="Runtime"   prefWidth="120"/>
-            <TableColumn fx:id="statusColumn"  text="Status"    prefWidth="120"/>
-            <TableColumn fx:id="progressColumn" text="Progress" prefWidth="120"/>
+            <TableColumn fx:id="idColumn"       text="ID"        prefWidth="160"/>
+            <TableColumn fx:id="algColumn"      text="Alg"       prefWidth="100"/>
+            <TableColumn fx:id="funcColumn"     text="Func"      prefWidth="120"/>
+            <TableColumn fx:id="iterColumn"     text="Iter"      prefWidth="80"/>
+            <TableColumn fx:id="runtimeColumn"  text="Runtime"   prefWidth="120"/>
+            <TableColumn fx:id="statusColumn"   text="Status"    prefWidth="120"/>
+            <TableColumn fx:id="progressColumn" text="Progress"  prefWidth="120"/>
         </columns>
     </TableView>
 </VBox>
+
