--- a/src/main/resources/orhestra/ui/main.fxml
+++ b/src/main/resources/orhestra/ui/main.fxml
@@ -26,7 +26,7 @@
                     </content>
                 </Tab>
 
-                <Tab text="VM Creator" closable="false">
+                <Tab text="Cloud (Advanced)" closable="false">
                     <content>
                         <fx:include source="/orhestra/ui/vm_creator.fxml"/>
                     </content>
